         the depreciated ones side-by-side.  The documentation only
         covers the new things; the depreciated ones are gone.

  0.15 - Turn the depreciated things into warnings.

  0.16 - Remove the depreciated things.


0.1204 2000.??.??
-----------------

Added IO::Pty support to Wheel::Run.  Skip the Pty tests if IO::Pty
isn't available, so's not to break testing for people without it.


0.1203 2000.12.29
-----------------

Very minor optimization to Gtk read/write resuming.  Replace Gtk's
noisy warning about resuming unpaused handles with quiet acceptance.

Added POE::Pipe::OneWay, a portable way to create one-way pipes.  It
tries pipe first, then unix domain socketpair, then inet sockets
before failing.

Added POE::Pipe::TwoWay, a portable way to create two-way pipes.  It
tries unix socketpair first, two pipes, then inet sockets before
failing.  It can be more frugal with filehandles than two one-way
pipes.

Added Wheel::Run, an open2/open3 style wheel that lets sessions spawn
off background processes.  It takes care of the whole pipe, fork, exec
deal.

Removed lib/TestPipe and replaced all its uses with either
Pipe::OneWay or Pipe::TwoWay.

Added &many_ok to TestSetup so that lots of tests can be marked ok at
once.  More importantly, lots of them can be marked as skipped in one
swell foop.

Added t/22_wheel_run.t to test uni- and bidirectional pipes, plus the
Wheel::Run wheel which uses them.


0.1202 2000.12.26
-----------------

Happy Boxing Day!

Revised nearly all the documentation.

Documented FollowTail's SeekBack parameter.  Whoops!  Changed
FollowTail's object implementation from a hashref to a listref while I
was in it.

Added a conceptual cross-reference to POE's "SEE ALSO" section, so now
it acts as a table of contents for the entire distribution.  Pointed
all the other SEE ALSOs at it.

Replaced a stupid regexp in POE::Preprocessor with a faster one.

Fixed a couple spots in SocketFactory where the conversion from